Добавлена страница формления заказа

--- a/placing-order.html
+++ b/placing-order.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-Shop - корзина</title>
+    <title>E-Shop - оформление заказа</title>
 
     <link rel = "stylesheet" href="style.css">
 
     <link rel="icon" href="заглушка.jpg">
 
-    <script src="cart.js" defer></script>
+    <script src="script.js" defer></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
@@ -28,12 +28,8 @@
         </ul>
     </div>
     <!-- <img src="banner.jpg"> -->
-    <h1> E-commerce Platform </h1>
-    <p>Интернет-магазин под названием, которое я придумаю позже.</p>
+    <h1> Оформление заказа </h1>
+    
 
-    <div id="cart-items" class="cards-container"></div>
-    <div id="total-price" style="font-weight:bold; font-size:18px;"></div>
-
-    <a href="placing-order.html"><button  id="place-order">Оформить заказ</button></a>
 </body>
 </html>
