Добавлена проверка корректности данных

--- a/cart.html
+++ b/cart.html
@@ -43,7 +43,7 @@
             <input type="text" id="customer-name">
             
             <label>Контакт (телефон или email):</label>
-            <input type="text" id="customer-contact">
+            <input type="text" id="customer-contact" placeholder="+7 999 123-45-67">
             
             <label>Адрес доставки:</label>
             <input type="text" id="customer-address">
