(безуспешно) пытаюсь изенить данные в базе

--- a/catalog.html
+++ b/catalog.html
@@ -36,7 +36,7 @@
     <div id="sort-controls" style="margin-bottom: 20px;">
         <label for="sort-by">Сортировать по:</label>
         <select id="sort-by">
-            <option value="default">По умолчанию</option>
+            <option value="default" selected hidden>По умолчанию</option>
             <option value="price">Цене</option>
             <option value="quantity">Количеству</option>
         </select>
