--- a/cart.html
+++ b/cart.html
@@ -10,16 +10,19 @@
     <link rel="icon" href="заглушка.jpg">
 
     <script src="cart.js" defer></script>
+    <script src="search.js" defer></script>    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <div class="header">
         <h2>E-Shop</h2>
         <div class="search">
-            <p>&#128269;</p>
+            <p>🔍</p>
             <input placeholder="Поиск по сайту...">
             <button>Найти</button>
         </div>
+        <div id="search-results" class="search-results"></div>
+        <div id="search-results"></div>
         <ul>
             <li><a href="index.html">Главная</a></li>
             <li><a href="catalog.html">Каталог товаров</a></li>
