--- a/products/cpu.html
+++ b/products/cpu.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="../заглушка.jpg">
 
     <script src="product-page.js" defer></script>
-    <script src="../search.js" defer></script>    
+    <script src="search_products.js" defer></script>    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     
 </head>
